# hdd-monitor

./: CMakeLists.txt
src/agent/: CMakeLists.txt  Disc.h  DiskEnumerator.hpp  DiskId.cpp  DiskId.hpp  Server.cpp  main.cpp
src/agent/linux/: LinGeneralAnalyzer.cpp  LinSmartAnalyzer.cpp  LinSmartAnalyzer.h  LinuxSmartReader.cpp  SmartCtlOutputParser.cpp  SmartCtlOutputParser.h
src/agent/windows/: WMICommunication.cpp  WindowsDiskEnumerator.cpp
src/common/: DiskInfo.h  DiskInfoSerialize.h  SmartData.cpp  SmartData.h  SmartDataSerialize.h
src/monitor/: AgentsList.cpp  AgentsStatusProvider.hpp
src/monitor/Qml/: AgentsView.qml
tests/agent/: SmartCtlOutputParserTests.cpp
tests/common/: ProbeStatusTests.cpp
